--- a/greenhouse3.html
+++ b/greenhouse3.html
@@ -6,28 +6,20 @@
 	<body>
 		<form action=greenhouse_action.php method=post>
 			<h1>Greenhouse Info Form</h1>
-			<h3>pH</h3>
-			<div id=pH_form>
-				<input type=checkbox name=main_tank_pH>Main Tank pH</br>
-				<!--input type=checkbox name=small_tank_pH>Small Tank pH (I think it was removed)</-->
-			</div>
-			<h3>Dissolved O<sub>2</sub></h3>
-			<div id=o2_form>
-				<input type=checkbox name=main_tank_o2>Main Tank Dissolved O<sub>2</sub></br>
-				<!--input type=checkbox name=small_tank_o2>Small Tank Dissolved O<sub>2</sub></-->
-			</div>
 			<h3>Ambient Temperature</h3>
 			<div id=ambient_temp_form>
 				<h4>Zone 1</h4>
 				<div id=z1_ambient_temp_form>
+					<input type=checkbox name=main_tank_temp>Main Tank Temperature
+					<input type=checkbox name=main_tank_top>Main Tank Top Temperature
+					<input type=checkbox name=main_tank_middle>Main Tank Middle Temperature
+					<input type=checkbox name=main_tank_bottom>Main Tank Bottom Temperature
 					<input type=checkbox name=z1_ceiling>Ceiling
-					<input type=checkbox name=z1_middle>Middle
 					<input type=checkbox name=z1_ground>Ground
 				</div>
 				<h4>Zone 2</h4>
 				<div id=z2_ambient_temp_form>
 					<input type=checkbox name=z2_ceiling>Ceiling
-					<input type=checkbox name=z2_middle>Middle
 					<input type=checkbox name=z2_ground>Ground
 				</div>
 				<h4>Zone 3</h4>
@@ -35,13 +27,21 @@
 					<input type=checkbox name=z3_ceiling>Ceiling
 					<input type=checkbox name=z3_middle>Middle
 					<input type=checkbox name=z3_ground>Ground
+					<input type=checkbox name=small_tank_temp>Small Tank
 				</div>
 			</div>
-			<h3>Ambient Humidity</h3>
-			<div id=ambient_humidity_form>
-				<input type=checkbox name=z1_humidity>Zone 1</br>
-				<input type=checkbox name=z2_humidity>Zone 2</br>
-				<input type=checkbox name=z3_humidity>Zone 3
+			<h3>Acididy/Basicity (pH)</h3>
+			<div id=pH_forms>
+				<input type=checkbox name=main_tank_pHa>Main Tank pH 1
+				<input type=checkbox name=main_tank_pHb>Main Tank pH 2
+				<input type=checkbox name=main_tank_pHc>Main Tank pH 3
+				<input type=checkbox name=main_tank_pHd>Main Tank pH 4 
+			</div>
+			<h3>O<sub>2</sub></h3>
+			<div id=o2_forms></div>
+				<input type=checkbox name=main_tank_o2>Main Tank Dissolved O<sub>2</sub>
+				<!--input type=checkbox name=small_tank_o2>Small Tank Dissolved O<sub>2</sub></-->
+				<input type=checkbox name=main_tank_rpot>Main Tank Oxidation Reduction Potential
 			</div>
 			<input type=submit name="submit_btn">
 		</form>
