--- a/greenhouse.html
+++ b/greenhouse.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
 		<title>Greenhouse info form</title>
-		<link rel=stylesheet type="text/css" href=greenhouse_form.css>
+		<link rel=stylesheet type="text/css" href=stylesheet.css>
 		<script type="text/javascript" src="select_all.js"></script>
 	</head>
 	<body>
@@ -22,6 +22,7 @@
 				<h4>Zone 2</h4>
 				<div id=z2_ambient_temp_form>
 					<input class=cb checked=false type=checkbox name=z2_ceiling>Ceiling
+					<input class=cb checked=false type=checkbox name=z2_middle>Middle
 					<input class=cb checked=false type=checkbox name=z2_ground>Ground
 				</div>
 				<h4>Zone 3</h4>
