--- a/greenhouse.html
+++ b/greenhouse.html
@@ -66,7 +66,7 @@
 				document.getElementById("to").value = today;
 			</script>
 			<p style="display:inline">Fetch records from <input id=from style="display: inline;" type=date name=fromdate value="2015-01-05"> to <input id=to style="display: inline;" type=date name=todate value="2016-08-06"></p>
-			<input type=submit name="submit_btn">
+			<input type=submit name="submit_btn"><input class=cb checked=false type=checkbox name=showgraph>Graph results
 			<hr>
 		</form>
 	</body>
