--- a/greenhouse.html
+++ b/greenhouse.html
@@ -53,7 +53,7 @@
 			<script>
 				var today = new Date();
 				var dd = today.getDate();
-				var mm = today.getMonth()+1; //January is 0!
+				var mm = today.getMonth()+1; //offset 0-index
 				var yyyy = today.getFullYear();
 				if(dd<10) {
 					dd='0'+dd
@@ -66,7 +66,7 @@
 				document.getElementById("to").value = today;
 			</script>
 			<p style="display:inline">Fetch records from <input id=from style="display: inline;" type=date name=fromdate value="2015-01-05"> to <input id=to style="display: inline;" type=date name=todate value="2016-08-06"></p>
-			<input type=submit name="submit_btn"><input class=cb checked=false type=checkbox name=showgraph>Graph results
+			<input type=submit name="submit_btn"><input class=cb checked=false type=checkbox name=showgraph><span>Graph results</span>
 			<hr>
 		</form>
 	</body>
